crates/cli_tests/src/snapshots/cli_tests__cli_tests__known_type_error.snap
---
source: crates/cli_tests/src/lib.rs
assertion_line: 1141
expression: cli_check_out.normalize_stdout_and_stderr()
---

── TYPE MISMATCH in test-projects/known_bad/TypeError.roc ──────────────────────

Something is off with the body of the main definition:

3│  main : Str -> Task {} []
4│  main = \_ ->
5│      "this is a string, not a Task {} [] function like the platform expects."
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

The body is a string of type:

    Str

But the type annotation on main says it should be:

    Task {} []

Tip: Add type annotations to functions or values to help you figure
this out.

────────────────────────────────────────────────────────────────────────────────

1 error and 0 warning found in <ignored for test> ms
