crates/cli_tests/src/snapshots/cli_tests__cli_tests__module_imports_pkg_no_flag.snap
---
source: crates/cli_tests/src/lib.rs
expression: cli_test_out.normalize_stdout_and_stderr()
---
── UNRECOGNIZED PACKAGE in test-projects/module_imports_pkg/Module.roc ─────────

This module is trying to import from `pkg`:

3│  import pkg.Foo
           ^^^^^^^

A lowercase name indicates a package shorthand, but I don't know which
packages are available.

When checking a module directly, I look for a `main.roc` app or
package to resolve shorthands from.

You can create it, or specify an existing one with the --main flag.
