crates/cli_tests/src/snapshots/cli_tests__cli_tests__transitive_expects_verbose.snap
---
source: crates/cli_tests/src/lib.rs
expression: cli_test_out.normalize_stdout_and_stderr()
---
Compiled in <ignored for test> ms.

Direct.roc:
    0 failed and 2 passed in <ignored for test> ms.

Transitive.roc:
    0 failed and 1 passed in <ignored for test> ms.
