crates/cli_tests/src/snapshots/cli_tests__cli_tests__unused_import.snap
---
source: crates/cli_tests/src/lib.rs
assertion_line: 1232
expression: cli_check_out.normalize_stdout_and_stderr()
---

── UNUSED IMPORT in test-projects/known_bad/UnusedImport.roc ───────────────────

Symbol is imported but not used.

3│  import Symbol exposing [Ident]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Since Symbol isn't used, you don't need to import it.

────────────────────────────────────────────────────────────────────────────────

0 error and 1 warning found in <ignored for test> ms
